# Poker-Now-Analysis

./: .gitignore  LICENSE  Poker OOP.py  README.md  hand.py  main.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
Utils/: hand.py
docs/: .readthedocs.yaml  classes.rst  conf.py  functions.rst  glossary.rst  intro.rst  requirements.txt
docs/_templates/: layout.html
docs/source/: classes.rst  conf.py  functions.rst  index.rst  intro.rst
old/: Poker OOP.py
poker/: analysis.py  base.py  build.py  classes.py  document_filter_class.py  game_class.py  hand.py  hand_class.py  player_class.py  plot.py  poker_class.py  processor.py  time_series_class.py
poker/classes/: data.py  document_filter.py  document_filter_class.py  event.py  game_class.py  hand.py  hand_class.py  match.py  player.py  poker.py  poker_class.py  time_series_class.py
poker/utils/: base.py  class_functions.py  collect.py  functions.py  parse.py  processor.py  tools.py
