[build-system]
requires = [
    "numpy~=1.20.3",
    "pandas~=1.2.4",
    "matplotlib~=3.4.2",
    "setuptools>=42",
    "wheel"
    ]

# build-backend = "flit_core.buildapi"
build-backend = "setuptools.build_meta"

[project]
name = "poker-now-analysis"
authors = [{name = "Peter Rigali", email = "peterjrigali@gmail.com"}]
dynamic = ["1.0.0", "A package for analyzing past performance and player habits from Poker Now."]
